# roll_dice

./: .gitignore  Cargo.toml  android_build.sh  ios_build.sh  readme.md
.cargo/: config.toml
android/roll_dice/: .gitignore  settings.gradle.kts
android/roll_dice/app/: build.gradle.kts
android/roll_dice/app/src/androidTest/java/xyz/lsy969999/roll_dice/: ExampleInstrumentedTest.kt
android/roll_dice/app/src/main/: AndroidManifest.xml
android/roll_dice/app/src/main/assets/models/dice/: scene.gltf
android/roll_dice/app/src/main/java/xyz/lsy969999/roll_dice/: BevySurfaceView.kt  MainActivity.kt  RustBridge.kt
android/roll_dice/app/src/main/java/xyz/lsy969999/roll_dice/ui/theme/: Color.kt  Theme.kt  Type.kt
android/roll_dice/app/src/main/res/values/: themes.xml
android/roll_dice/app/src/test/java/xyz/lsy969999/roll_dice/: ExampleUnitTest.kt
android/roll_dice/gradle/wrapper/: gradle-wrapper.properties
assets/models/dice/: license.txt
ios/roll_dice/: .gitignore
ios/roll_dice/roll_dice/: AppDelegate.swift  Launch Screen.storyboard  MetalView.swift  SceneDelegate.swift  ViewController+CoreMotion.swift  ViewController.swift  libroll_dice.h  roll_dice-Bridging-Header.h
ios/roll_dice/roll_dice.xcodeproj/: project.pbxproj
ios/roll_dice/roll_dice.xcodeproj/xcshareddata/xcschemes/: roll_dice.xcscheme
ios/roll_dice/roll_dice/Assets.xcassets/SplashImage.imageset/: Contents.json
ios/roll_dice/roll_dice/Base.lproj/: Main.storyboard
src/: android_asset_io.rs  lib.rs  main.rs
src/app_view/: android.rs  app_views.rs  ios.rs  mod.rs
src/ffi/: android.rs  ios.rs  mod.rs
src/game/: asset_loader.rs  constant.rs  dice.rs  mod.rs  roll_dice.rs  ui.rs  wall.rs
web/public/: index.html
web/public/privacy/: index.html
