[package]
name = "roll_dice"
version = "0.1.0"
edition = "2021"

[lib]
name = "roll_dice"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
bevy = { version = "0.13.1" }
bevy_rapier3d = "0.25.0" # 0.13 > 0.25.0
# bevy-inspector-egui = "0.23"
rand = "0.8.5"

uuid = { version = "1.3.0", features = ["v4"] } # win id
libc = "*" # ios ffi
raw-window-handle = "0.6" # ios appview

# ios dependency
[target.'cfg(target_os = "ios")'.dependencies]
core-graphics = "*"
objc = "*"

# android dependency
[target.'cfg(target_os = "android")'.dependencies]
# android_logger = "0.13" # 0.13.3
# jni = "0.21" # 0.21.1
# jni_fn = "0.1" # 0.1.2 remove?
# Bevy와 일관성을 유지해야 함
# ndk-sys = "0.5.0+25.2.9519653" # v0.5.0+25.2.9519653
# ndk = "0.8.0" # 0.8.0
# ndk-context = "*" # 0.1.1
# log-panics = "*" # 2.1.0

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[profile.release]
# size optimize
opt-level = 3
panic = 'abort'     # Abort on panic
strip = true  
# Add this to your Cargo.toml rapier
codegen-units = 1
